--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -21,11 +21,28 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+
+            {% if current_user.is_authenticated %}
+            <a class="nav-item nav-link active" href="#">Hello, {{ current_user.name }}<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#">Sign out<span class="sr-only">(current)</span></a>
+            {% else %}
+            <a class="nav-item nav-link active" href="#">Sign up<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#">Sign in<span class="sr-only">(current)</span></a>
+            {% endif %}
         </div>
     </div>
 </nav>
 
 <div class="container">
+
+    <div>
+        {% for category, msg in get_flashed_messages(with_categories=True) %}
+            <div class="alert alert-{{ category }}">
+                {{ msg }}
+            </div>
+        {% endfor %}
+    </div>
+
     <!-- Page-specific block -->
     {% block content %}
     {% endblock %}
