--- a/webapp/templates/quotes.html
+++ b/webapp/templates/quotes.html
@@ -3,7 +3,9 @@
 {% block content %}
     <ul>
         {% for quote in quotes %}
+            {% if quote.user is not None %}
             <li> {{ quote.sentence }} ({{ quote.author }})</li>
+            {% endif %}
         {% endfor %}
     </ul>
 {% endblock %}
