--- a/webapp/templates/user_profile.html
+++ b/webapp/templates/user_profile.html
@@ -4,6 +4,12 @@
     <h1>{{ user.name }}</h1>
 
     <p>User's fav quote: {{ user.fav_quote.sentence }}</p>
+    <p>User's fav books:</p>
+    <ul>
+        {% for book in user.fav_books %}
+            <li> {{ book.title }}</li>
+        {% endfor %}
+    </ul>
 
     <small>user's password: {{ user.password }}</small>
 {% endblock %}
