--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ app_title }}</title>
 
     {% block custom_style %}{% endblock %}
 
