--- a/webapp/templates/signup.html
+++ b/webapp/templates/signup.html
@@ -7,6 +7,12 @@
             {{ form.username.label }}
             {{ form.username() }}
         </p>
+
+        <p>
+            {{ form.mail.label }}
+            {{ form.mail() }}
+        </p>
+
         <p>
             {{ form.password.label }}
             {{ form.password() }}
