--- a/webapp/templates/signup.html
+++ b/webapp/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <form action="" method="POST" enctype=multipart/form-data>
+    <form action="" method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}
