--- a/webapp/templates/simple_form.html
+++ b/webapp/templates/simple_form.html
@@ -1,12 +1,13 @@
 <form action="" method="POST">
     {{ form.hidden_tag() }}
+
+    {% for field in form %}
     <p>
-        {{ form.username.label }}
-        {{ form.username() }}
+        {{ field.label }}
+        {{ field() }}
     </p>
-    <p>
-        {{ form.password.label }}
-        {{ form.password() }}
-    </p>
+    {% endfor %}
+
     {{ form.submit() }}
+
 </form>
