--- a/webapp/templates/simple_form.html
+++ b/webapp/templates/simple_form.html
@@ -1,7 +1,7 @@
 <form action="" method="POST">
     {{ form.hidden_tag() }}
 
-    {% for field in form %}
+    {% for field_name in form._field %}
     <p>
         {{ field.label }}
         {{ field() }}
