--- a/webapp/templates/simple_form.html
+++ b/webapp/templates/simple_form.html
@@ -1,7 +1,7 @@
 <form action="" method="POST">
     {{ form.hidden_tag() }}
 
-    {% for field_name in form._field %}
+    {% for field_name, field in form._field.keys() %}
     <p>
         {{ form._.label }}
         {{ field() }}
