--- a/webapp/templates/simple_form.html
+++ b/webapp/templates/simple_form.html
@@ -2,10 +2,12 @@
     {{ form.hidden_tag() }}
 
     {% for field_name, field in form._field.keys() %}
-    <p>
-        {{ field.label }}
-        {{ field() }}
-    </p>
+        {% if field_name == 'submit' %}
+            <p>
+                {{ field.label }}
+                {{ field() }}
+            </p>
+        {% endif %}
     {% endfor %}
 
     {{ form.submit() }}
