--- a/webapp/templates/signin.html
+++ b/webapp/templates/signin.html
@@ -1,16 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="" method="POST">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.username.label }}
-        {{ form.username() }}
-    </p>
-    <p>
-        {{ form.password.label }}
-        {{ form.password() }}
-    </p>
-    {{ form.submit() }}
-</form>
+
+    {% include 'simple_form.html' %}
+
 {% endblock %}
